fixed payment alignment issue

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -242,7 +242,7 @@ header {
   margin-top: 0;
 }
 
-#contactinfo,#cardinfo,#agreements,#card-expinfo{
+#contactinfo,#cardinfo,#agreements,#card-expinfo,#basicinfo{
   margin:2%;
 }
 
